--- a/2. CSS/Week2/CSS FlexBox/style.css
+++ b/2. CSS/Week2/CSS FlexBox/style.css
@@ -1,6 +1,12 @@
 html {
   box-sizing: border-box;
-  background-color: aqua;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    180deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(32, 173, 165, 1) 32%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 *,
 *:before,
@@ -9,19 +15,29 @@ html {
 }
 
 #parent {
-    /* this is flex-container - {contains all the flex items} */
+  /* this is flex-container - {contains all the flex items} */
   border: solid red 6px;
-  display: flex ;
+  display: flex;
+  height: 1000px;
   /* flex-direction: column; */
   /* flex-wrap: nowrap; */
-  flex-flow: row-reverse wrap; /* combination of flex direction and flex wrap*/
+  flex-flow: row wrap; /* combination of flex direction and flex wrap*/
+  justify-content: start; /* how does the item display on main axis */
+  align-items: start; /*same as justify content but on cross axis*/
+  align-content: start; /* works on cross axis*/
+  /* align-items - where the items should be ideally present 
+  align-content - distribution of space
+  */
 }
 
 #parent div {
-    /*flex items */
-    border: solid blue 4px;
-    padding: 20px;
-    background-color: bisque;
-    width: 450px;
-    text-align: center;
+  /*flex items */
+  border: solid blue 4px;
+  padding: 20px;
+  background-color: bisque;
+  text-align: center;
+  min-width: 150px;
+  /* max-width: 100%; */
+  min-height: 120px;
+  max-height: 150px;
 }
