--- a/23. Ping Pong Game/style.css
+++ b/23. Ping Pong Game/style.css
@@ -19,11 +19,11 @@ html {
     position: relative;
 }
 .paddle{
-    width: 5px;
-    height: 50px;
-    background-color: black;
+    width: 15px;
+    height: 200px;
+    background-color: blue;
     position: absolute;
-    left: 5px;
+    left: 2px;
 }
 .ball{
     width: 20px;
