--- a/24. Snake Game/style.css
+++ b/24. Snake Game/style.css
@@ -11,7 +11,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: antiquewhite;
     text-align: center;
 }
@@ -50,7 +50,25 @@ body{
     transition: background-color 0.3s ease; /* Smooth transition */
 }
 
-#start-btn:hover {
+#start-btn:hover  {
     background-color: #0056b3; /* Darken background on hover */
     cursor:pointer;
+}
+
+
+
+.food {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    border-radius: 50%;
+    animation: blink 3s infinite;
+}
+
+@keyframes blink {
+    50%{
+        opacity: 0.5;
+        background-color: green;
+    }
 }
