--- a/24. Snake Game/style.css
+++ b/24. Snake Game/style.css
@@ -55,7 +55,11 @@ body{
     cursor:pointer;
 }
 
-
+@keyframes blink {
+    50%{
+        opacity: 0.5;
+    }
+}
 
 .food {
     position: absolute;
@@ -66,8 +70,11 @@ body{
     animation: blink 1s infinite;
 }
 
-@keyframes blink {
-    50%{
-        opacity: 0.5;
-    }
+.snake {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: green;
+    border: 1px solid black;
+    /* border-radius: 50%; */
 }
